--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Clacky Configuration
+.1024*
+!.1024
+.breakpoints
+
 # dependencies
 /node_modules
 /.pnp
@@ -7,8 +12,14 @@
 
 # testing
 /coverage
+/test-results
+/playwright-report
+/blob-report
+/playwright/.cache/
 
-# production
+# TypeScript
+*.tsbuildinfo
+dist/
 /build
 
 # misc
@@ -17,6 +28,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
@@ -26,11 +38,7 @@ yarn-error.log*
 .eslintcache
 package-lock.json
 pnpm-lock.yaml
-.env
 stats.html
 
+# IDE
 .idea
-/test-results/
-/blob-report/
-/playwright/.cache/
-playwright-report
